--- a/02week/nasa/css/style.css
+++ b/02week/nasa/css/style.css
@@ -1,14 +1,149 @@
-html, body {
-  margin: 0, auto;
-  min-height: 100%;
-  color: white;
-
+body {
+    width: 960px;
+    margin: 0 auto;
 }
 
-.main-container {
- background: url("../img/nasa-background.jpg");
- display: flex;
- justify-content: center;
- align-content: center;
- align-items: stretch;
+#hero {
+    background-image: url("../img/nasa-background.jpg");
+    background-repeat: no-repeat;
+    background-position: top;
+    background-size: cover;
+    width: 850px;
+    height: 350px;
+    margin: 0 auto;
+}
+
+h1 {
+    font-family: Helvetica, sans-serif;
+    font-size: 72px;
+    color: white;
+    text-align: center;
+    font-weight: bold;
+}
+
+#nasa {
+    width: 50%;
+    margin: 0 auto;
+    padding: 150px;
+}
+
+#info {
+    width: 780px;
+    height: 254px;
+    background-color: #e6e6e6;
+    margin: 0 auto;
+    margin-top: 20px;
+    padding: 35px;
+    padding-top: 25px;
+}
+
+.social-media {
+    width: 240px;
+    height: 184px;
+    display: inline-block;
+    /*background-color: red;*/
+    margin-right: 10px;
+    vertical-align: top;
+}
+
+.office-info {
+    width: 250px;
+    height: 184px;
+    display: inline-block;
+    /*background-color: blue;*/
+    margin-left: 10px;
+    margin-right: 10px;
+    vertical-align: top;
+}
+
+.contact-us {
+    width: 240px;
+    height: 184px;
+    display: inline-block;
+    /*background-color: green;*/
+    margin-left: 10px;
+    vertical-align: top;
+}
+
+li {
+    list-style-type: none;
+    font-family: Helvetica, sans-serif;
+    color: #666;
+    line-height: 24px;
+    font-size: 14px;
+}
+
+h3 {
+    font-family: Helvetica, sans-serif;
+    font-size: 18px;
+    color: black;
+    font-weight: bold;
+}
+
+p {
+    font-family: Helvetica, sans-serif;
+    color: #666;
+    line-height: 24px;
+    font-size: 14px;
+    margin-top: 6px;
+}
+
+[type=text] {
+    width: 90%;
+    margin-top: 3px;
+    padding: 10px;
+    border: none;
+}
+
+textarea {
+    width: 90%;
+    margin-top: 3px;
+    padding: 10px;
+    border: none;
+    color: lightgray;
+}
+
+[type=text]:focus, textarea:focus {
+    outline: none;
+    color: #666;
+    border: 1px solid lightseagreen;
+    box-shadow: 0 0 3px 0 lightseagreen;
+}
+
+[name=message] {
+    height: 50px;
+    resize: none;
+}
+
+[value=Send] {
+    width: 98.5%;
+    background-color: #4d4d4d;
+    color: white;
+    border: none;
+    padding: 10px;
+    margin-top: 10px;
+    font-family: Helvetica, sans-serif;
+    font-size: 16px;
+}
+
+[value=Send]:hover {
+    background-color: lightseagreen;
+    color: white;
+}
+
+[value=Send]:focus {
+    outline: none;
+    color: white;
+    border: none;
+    margin-top: 12px;
+    margin-left: 2px;
+}
+
+a {
+    text-decoration: none;
+    color: lightseagreen;
+}
+
+a:hover {
+    color: gray;
 }
