--- a/03week/newspaper/css/style.css
+++ b/03week/newspaper/css/style.css
@@ -1,87 +1,30 @@
-body {
-  text-align: center;
-  font-family: Helvetica, sans-serif;
-  font-size: 19px;
-}
-
-.flex-grid-nav {
+.flex-grid {
   display: flex;
-  width: 360px;
-  margin: 0 auto;
-  justify-content: center;
-  align-items: space-around;
-  padding: 10px;
 }
-
-.flex-grid-nav .col {
+.flex-grid .col {
   flex: 1;
-  padding: 10px 0px;
 }
-
-header {
-  margin-top: 35px;
-}
-
-h1 {
-  text-align: center;
-  font-size: 36px;
-  padding-bottom: 20px;
-}
-
-a {
-  text-decoration: none;
-  color: gray;
-}
-
-a:hover {
-  color: coral;
-}
-
-.flex-grid-main {
+.flex-grid-thirds {
   display: flex;
-  width: 940px;
-  margin: 0 auto;
   justify-content: space-between;
-  align-items: flex-start;
-  padding: 50px;
+  margin: 0 0 2% 0;
+}
+.flex-grid-thirds .col {
+  width: 32%;
+}
+* {
+  box-sizing: border-box;
+}
+body {
+  padding: 30px;
+  color: white;
 
 }
-
-.col-main {
-  flex: 2;
+.flex-grid { 
+  margin: 0 0 2% 0;
 }
-
-.col-main-aside {
-  flex: 1;
-  /*background-color: red;*/
-  /*ju-self: flex-end;*/
-
+.col {
+  background: #007fff;
+  padding: 20px;
+  text-align: center;
 }
-
-p {
-  text-align: left;
-  font-size: 16px;
-  line-height: 24px;
-}
-
-h2 {
-  text-align: left;
-  font-size: 24px;
-  font-weight: bold;
-  padding-bottom: 15px;
-}
-
-article img {
-  width: 55%;
-  margin: 0 30px 10px 0;
-
-}
-
-hr {
-  margin: 0 auto;
-  width: 65%;
-}
-
-/*.img-aside {
-  width: 75%;
-}*/
