--- a/03week/newspaper/css/style.css
+++ b/03week/newspaper/css/style.css
@@ -5,3 +5,10 @@ body {
     background-color: #c5ccd8;
 
 }
+
+h1 {
+    font-family: Lato;
+    text-align: center;
+    font-size: 42px;
+    padding-bottom: 20px;
+}
