--- a/03week/newspaper/css/style.css
+++ b/03week/newspaper/css/style.css
@@ -6,6 +6,23 @@ body {
 
 }
 
+.flex-grid-nav {
+    display: flex;
+    max-width: 100%;
+    height: 55px;
+    margin: 0 auto;
+    padding: 25px;
+    background-color: ##CEEED9;
+}
+
+.col-title {
+    display: flex;
+    flex: 2;
+    justify-content: flex-start;
+    align-items: center;
+    padding-top: 17px;
+    padding-left: 25px;
+}
 h1 {
     font-family: Lato;
     text-align: center;
