--- a/04week/testwebsite/css/style.css
+++ b/04week/testwebsite/css/style.css
@@ -2,7 +2,7 @@ body {
     text-align: center;
     font-family: 'Lato', sans-serif;
     font-size: 20px;
-    background-color: #c5ccd8;
+    background-color: #CEEED9;
 
 }
 
