--- a/04week/01Checkpoint/css/style.css
+++ b/04week/01Checkpoint/css/style.css
@@ -32,6 +32,23 @@ body {
     padding: 0px 50px;
 }
 
+#hero {
+    background-image: url("../img/Bigjojo.png");
+    background-repeat: no-repeat;
+    background-position: top;
+    background-size: cover;
+    width: 850px;
+    height: 350px;
+    margin: 0 auto;
+}
+
+#Jojo {
+    width: 50%;
+    margin: 0 auto;
+    padding: 150px;
+}
+
+
 h1 {
     font-family: Lato;
     text-align: center;
