--- a/04week/01Checkpoint/css/style.css
+++ b/04week/01Checkpoint/css/style.css
@@ -48,6 +48,13 @@ h1 {
     padding: 50px;
 }
 
+.jotaro {
+	display: flex;
+	flex-wrap: wrap;
+	margin-left: -10px;
+	margin-top: -10px;
+}
+
 .article-content {
     flex: 1;
     margin-top: 5px;
