--- a/04week/01Checkpoint/css/style.css
+++ b/04week/01Checkpoint/css/style.css
@@ -48,11 +48,22 @@ h1 {
     padding: 50px;
 }
 
+#jotaro {
+  width: 780px;
+    height: 254px;
+    margin: 0 auto;
+    margin-top: 20px;
+    padding: 35px;
+    padding-top: 25px;
+}
+
 .jotaro {
-	display: flex;
-	flex-wrap: wrap;
-	margin-left: -10px;
-	margin-top: -10px;
+    width: 240px;
+    height: 184px;
+    display: inline-block;
+    /* background-color: red; */
+    margin-right: 10px;
+    vertical-align: top;
 }
 
 .article-content {
