--- a/04week/welcome/css/style.css
+++ b/04week/welcome/css/style.css
@@ -16,7 +16,19 @@ font-size: 48px;
 color: white;
 }
 
-/* PHone Size */
+.box{
+width: 100px;
+height: 100px;
+}
+
+.black {
+  width: 90%;
+  height: 400px;
+  background-color: #black;
+  margin: 0 auto;
+}
+
+/* Phone Size */
 
 @media (max-width: 767px) {
   #hero {
