--- a/04week/welcome/css/style.css
+++ b/04week/welcome/css/style.css
@@ -26,8 +26,9 @@ height: 400px;
   height: 400px;
   background-color: black;
   margin: 0 auto;
-  align-items: flex-end;
-}
+  /*align-items: flex-end;
+}*/
+} 
 
 /* Phone Size */
 
