--- a/04week/welcome/css/style.css
+++ b/04week/welcome/css/style.css
@@ -21,7 +21,8 @@ width: 90%;
 height: 400px;
 }
 
-.box_black {
+.container {
+  display: flex;
   width: 90%;
   height: 400px;
   background-color: black;
@@ -48,7 +49,7 @@ align-items: center;
 width: 20%;
 height: 30px;
 background-color: #33A8DD;
-align-items: flex-end; 
+align-items: flex-end;
 }
 
 /* Phone Size */
