--- a/04week/welcome/css/style.css
+++ b/04week/welcome/css/style.css
@@ -1,5 +1,6 @@
 body {
   width: 100%:
+  margin: 0 auto;
 }
 
 #hero {
@@ -12,23 +13,17 @@ body {
 
 #hero h1 {
   padding-top: 175px;
-font-size: 48px;
-color: white;
+  font-size: 48px;
+  color: white;
 }
 
-.box{
-width: 90%;
-height: 400px;
-}
-
-.flex-grid-thirds {
+.container {
   display: flex;
   justify-content: space-around;
   width: 90%;
   height: 400px;
-  background-color: black;
-  align-items: flex-start;
   margin: 0 auto;
+  background-color: black;
 }
 
 .blue_rectangle {
@@ -58,6 +53,21 @@ justify-content: space-between;
 margin: 50px;
 }
 
+h1 {
+    color: white;
+    font-size: 48px;
+    text-align: center;
+    margin: 18px 0;
+}
+
+p {
+    font-size: 14px;
+    color: white;
+    text-align: center;
+    font-family: Helvetica, sans-serif;
+    line-height: 20px;
+    max-width: 90%;
+}
 
 /* Phone Size */
 
@@ -65,7 +75,58 @@ margin: 50px;
   #hero {
     background-color:
     #33A8DD;
+    width: 100%;
   }
+
+  .container {
+  flex-flow: column nowrap;
+  min-height: 860px;
+  align-items: center;
+  justify-content: space-around;
+  padding: 0;
+  width: 100%;
+  background-color: #f7f5f6;
+  }
+
+  .blue_rectangle {
+  flex-flow: column wrap;
+  flex: 1;
+  width: 175px;
+  height: 200px;
+  background-color: #33A8DD;
+  }
+
+  .orange_rectangle {
+  flex-flow: column wrap;
+  flex: 1;
+  width: 175px;
+  height: 200px;
+  background-color: #F46731;
+  }
+
+  .aqua_rectangle {
+  flex-flow: column wrap;
+  flex: 1;
+  width: 175px;
+  height: 200px;
+  background-color: #2BCDC0;
+
+  }
+
+  h1 {
+      color: black;
+      font-size: 48px;
+      flex-flow: column wrap;
+  }
+
+  p {
+      color: black;
+      font-size: 14px;
+      font-family: Helvetica, sans-serif;
+      line-height: 20px;
+      flex-flow: column wrap;
+  }
+
 
 
 }
