--- a/04week/welcome/css/style.css
+++ b/04week/welcome/css/style.css
@@ -20,6 +20,7 @@ body {
 .container {
   display: flex;
   justify-content: space-around;
+  flex-direction: row;
   width: 90%;
   height: 400px;
   margin: 0 auto;
@@ -79,36 +80,30 @@ p {
   }
 
   .container {
-  flex-flow: column nowrap;
-  min-height: 860px;
+  min-height: 900px;
   align-items: center;
   justify-content: space-around;
+  flex-direction: column;
   padding: 0;
   width: 100%;
   background-color: #f7f5f6;
   }
 
   .blue_rectangle {
-  flex-flow: column wrap;
-  flex: 1;
   width: 175px;
-  height: 200px;
+  height: 30px;
   background-color: #33A8DD;
   }
 
   .orange_rectangle {
-  flex-flow: column wrap;
-  flex: 1;
   width: 175px;
-  height: 200px;
+  height: 30px;
   background-color: #F46731;
   }
 
   .aqua_rectangle {
-  flex-flow: column wrap;
-  flex: 1;
   width: 175px;
-  height: 200px;
+  height: 30px;
   background-color: #2BCDC0;
 
   }
