--- a/04week/01Checkpoint/css/style.css
+++ b/04week/01Checkpoint/css/style.css
@@ -2,17 +2,19 @@ body {
     text-align: center;
     font-family: 'Lato', sans-serif;
     font-size: 16px;
-    background-color: #c5ccd8;
+    background-color: white;
+    width: 100%:
+    margin: 0 auto;
 
 }
 
 .flex-grid-nav {
     display: flex;
     max-width: 100%;
+    margin: auto 0;
     height: 55px;
-    margin: 0 auto;
     padding: 25px;
-    background-color: #CEEED9;
+    background-color: white;
 }
 
 .col-title {
@@ -26,37 +28,79 @@ body {
 
 .col-nav {
     display: flex;
+    width: 100%;
     flex: 1;
     justify-content: space-around;
     align-items: center;
+    text-decoration:none;
     padding: 0px 50px;
 }
 
 h1 {
-    font-family: Lato;
+    font-family: 'Lobster Two', cursive;
     text-align: center;
-    font-size: 36px;
+    font-size: 24px;
     padding-bottom: 20px;
 }
 
-.flex-grid-main {
-    display: flex;
-    width: 80%;
-    margin: 0 auto;
-    justify-content: space-between;
-    align-items: flex-start;
-    padding: 50px;
+#hero {
+  background-image: url("../img/Josuke.png");
+  background-repeat: no-repeat;
+  align-items: flex-start;
+  justify-content: space-between;
+  width: 850px;
+  height: 350px;
+  margin: 30px auto;
+  margin-left: 300px;
+  text-align: center;
 }
 
-
-.article-content {
-    flex: 1;
-    margin-top: 5px;
+#hero h1 {
+  padding-top: 175px;
+  font-size: 48px;
+  color: white;
 }
 
-.col-main {
-    flex: 2.15;
-    display: flex;
+.container {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  width: 80%;
+  height: 400px;
+  margin: 0 auto;
+  background: blue;
+  background: -webkit-linear-gradient(left top, #ffb6c1, #b0c4de);
+}
+
+div.jotaro {
+   content:url("../img/jotaro.jpg");
+   width: 100%;
+   height: 100%;
+   align-items: flex-start;
+   justify-content: space-between;
+   margin: 50px;
+}​
+
+div.Oku {
+content: url("../img/Oku.png");
+width: 20%;
+height: 30px;
+align-items: center;
+justify-content: space-between;
+margin: 50px;
+}
+
+div.Koichi {
+content:url("../img/Koichi.png");
+width: 100%;
+height: 100%;
+align-items: center;
+justify-content: space-between;
+margin: 50px;
+}
+
+.col-main-footer {
     flex-flow: column;
     align-items: flex-start;
+    justify-content: center;
 }
