--- a/04week/01Checkpoint/css/style.css
+++ b/04week/01Checkpoint/css/style.css
@@ -1,7 +1,6 @@
 body {
-    text-align: center;
     font-family: 'Lato', sans-serif;
-    font-size: 16px;
+    font-size: 20px;
     background-color: white;
     width: 100%:
     margin: 0 auto;
@@ -39,7 +38,7 @@ body {
 h1 {
     font-family: 'Lobster Two', cursive;
     text-align: center;
-    font-size: 24px;
+    font-size: 30px;
     padding-bottom: 20px;
 }
 
@@ -49,7 +48,7 @@ h1 {
   background-position: top;
   background-size: cover;
   width: 100%;
-  height: 250px;
+  height: 350px;
   margin: 20px auto;
 }
 
@@ -68,7 +67,7 @@ h1 {
 .button {
   margin: 0 auto;
   width: 150px;
-  background-color: #11d1ac;
+  background-color: #ffb6c1;
   color: white;
   padding: 20px;
   text-align: center;
@@ -93,6 +92,33 @@ h2 {
     padding-bottom: 20px;
 }
 
+.flex-sct-1 {
+  display: flex;
+  background-color: white;
+  justify-content: center;
+  align-items: center;
+  max-width: 100%;
+  height: 400px;
+  margin: 0 auto;
+  /*padding: 75px, 40px;*/
+}
+
+.flex-sct-1-img {
+  display: flex;
+  flex: 1;
+  width: 30%;
+  margin: 0 auto;
+  /*padding: 100px;
+  justify-content: space-around;
+  align-items: center;*/
+}
+
+.flex-sct-1-text {
+  display: flex;
+  flex: 2;
+  padding: 0 40px;
+}
+
 .container {
   display: flex;
   justify-content: center;
@@ -112,7 +138,7 @@ div.jotaro {
 }​
 
 div.Oku {
-  content: url("../img/Oku.png");
+  content:url("../img/Oku.png");
   width: 150px;
   height: 150px;
   margin: 50px;
@@ -131,3 +157,66 @@ div.Rohan {
    height: 150px;
    margin: 50px;
 }​
+
+#footer-img {
+  background-image:url("../img/Bigjojo.png");
+  background-repeat: no-repeat;
+  background-position: bottom;
+  background-size: cover;
+  max-width: 80%;
+  height: 200px;
+  margin: 0 auto;
+
+}
+
+.footer-text{
+  display: flex;
+  align-items: center;
+  flex-flow: column nowrap;
+  width: 800px;
+  justify-content: space-around;
+  margin: 0 auto;
+  padding: 50px;
+}
+
+.button2 {
+  margin-left; 10px;
+  width: 150px;
+  background-color: #ffb6c1;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  text-transform: uppercase;
+  justify-content: space-between;
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.button3 {
+  margin: 0 auto;
+  width: 150px;
+  background-color: #ffb6c1;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  text-transform: uppercase;
+  justify-content: space-between;
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.buttons-footer {
+  display: flex;
+  flex-flow: row;
+  margin: 0 auto;
+  padding: 20px;
+  justify-content: space-between;
+  width: 300px;
+}
+
+h4 {
+  font-weight: 500;
+  font-size: 36px;
+  text-align: center;
+  color: white;
+}
