--- a/05week/BootstrapResponsiveUtilityProject/css/style.css
+++ b/05week/BootstrapResponsiveUtilityProject/css/style.css
@@ -6,6 +6,7 @@
 ul {
     list-style-type: none;
     padding: 0;
+    line-height: 2; 
 }
 
 button {
@@ -17,6 +18,10 @@ button {
     font-weight: bold;
     letter-spacing: .125em;
     margin: 20px 0 60px 0;
+}
+
+h3 {
+  padding-top: 20px;
 }
 
 /*-- Nav CSS --*/
