--- a/07week/checkpointpractice/css/style.css
+++ b/07week/checkpointpractice/css/style.css
@@ -1,68 +1,167 @@
-#hero img {
-    opacity: 0.75;
-    margin: 0 auto;
-    height: 400px;
-    margin-bottom: 50px;
-}
 
-.jumbotron .container {
-    max-width: 100%;
-}
+    /*--Nav CSS --*/
 
-#about p {
-    color: #777;
-    line-height: 30px;
-    font-size: 1.5em;
-    padding: 25px;
-    position: center; 
-}
-
-#signature {
-    max-height: 80px;
-    max-width: 100%;
-    margin: 0 auto;
-}
-
-#wineMan {
-    max-height: 100%;
-    height: 650px;
-    width: 100%;
-
-/*media queries*/
-
-@media (max-width: 1215px) {
-    li a {
-        font-size: 15px;
+    .navbar {
+        border-color: #e7e7e7;
     }
-    li {
-        margin-top: 20px;
-    }
-}
 
-@media (max-width: 1090px) {
-    li a {
-        line-height: 24px;
+    #brand {
+        font-weight: 700;
+        letter-spacing: 5px;
     }
-    li {
-        margin-top: 18px;
-    }
-}
 
-
-/*phone size*/
-
-@media (max-width: 767px) {
-    h4 {
-        padding-right: 0px;
+    .navbar-default .navbar-brand {
+        color: #777;
     }
-    h1 {
-        font-size: 28px;
-        line-height: 34px;
-    }
-    h4 {
+
+    navbar.less:167 .navbar-brand {
+        float: left;
+        height: 50px;
+        padding: 15px 15px;
         font-size: 18px;
+        line-height: 20px;
     }
-    div img {
-        margin-top: 22px;
+    /*--Hero image CSS --*/
+
+    #hero img {
+        opacity: 0.75;
+        margin: 0 auto;
+        height: 400px;
+        margin-bottom: 50px;
     }
+
+  /*-  .jumbotron {
+        max-width: 100%;
+    } -*/
+
+    .container-fluid {
+        background-image: url("../img/wine-bg.jpg");
+        background-color: #999;
+        background-blend-mode: multiply;
+        height: 800px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        color: white;
+        text-align: center;
+        margin-bottom: 0;
+    }
+
+    #about p {
+        color: #777;
+        line-height: 30px;
+        font-size: 1.5em;
+        padding: 25px;
+        position: center;
+    }
+
+    #quote {
+        display: flex;
+        position: center;
+        justify-content: center;
+        font-style: italic;
+        font-size: 1.5em;
+        font-family: Georgia, serif;
+    }
+
+    #author {
+        font-size: 1em;
+        font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    }
+
+    #signature {
+        max-height: 80px;
+        max-width: 100%;
+        margin: 0 auto;
+    }
+
+    #wineMan {
+        max-height: 100%;
+        height: 650px;
+        width: 100%;
+    }
+
+  div#testimonial {
+    color: white;
+    text-align: center;
 }
+
+style.css:94
+
+container-fluid #testimonial {
+    background-image: url("../img/wine13.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-color: #999;
+    background-blend-mode: multiply;
+    height: 800px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    text-align: center;
+    margin-bottom: 0;
+}
+
+#testimonial h2 {
+    font-style: italic;
+    font-size: 3em;
+    font-family: Georgia, serif;
+}
+type.less:49
+.h2, h2 {
+    font-size: 30px;
+}
+
+#winetestimony {
+    display: flex;
+    position: center;
+    justify-content: center;
+    font-style: italic;
+    font-size: 1.5em;
+    font-family: Georgia, serif;
+}
+
+#description {
+    font-size: 1em;
+    font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+
+    /*media queries*/
+
+    @media (max-width: 1215px) {
+        li a {
+            font-size: 15px;
+        }
+        li {
+            margin-top: 20px;
+        }
+    }
+
+    @media (max-width: 1090px) {
+        li a {
+            line-height: 24px;
+        }
+        li {
+            margin-top: 18px;
+        }
+    }
+    /*phone size*/
+
+    @media (max-width: 767px) {
+        h4 {
+            padding-right: 0px;
+        }
+        h1 {
+            font-size: 28px;
+            line-height: 34px;
+        }
+        h4 {
+            font-size: 18px;
+        }
+        div img {
+            margin-top: 22px;
+        }
+    }
