--- a/07week/checkpointpractice/css/style.css
+++ b/07week/checkpointpractice/css/style.css
@@ -37,6 +37,7 @@
     .container-fluid {
         background-image: url("../img/wine-bg.jpg");
         background-color: #999;
+        background-repeat: no-repeat;
         background-blend-mode: multiply;
         height: 800px;
         display: flex;
@@ -76,9 +77,9 @@
     }
 
     #wineMan {
-        max-height: 100%;
-        height: 650px;
-        width: 100%;
+      max-height: 100%;
+      height: 650px;
+      width: 100%;
     }
 
   div#testimonial {
@@ -88,7 +89,7 @@
 
 style.css:94
 
-container-fluid #testimonial {
+#testimonial {
     background-image: url("../img/wine13.jpg");
     background-size: cover;
     background-repeat: no-repeat;
