--- a/07week/Checkpoint2/css/style.css
+++ b/07week/Checkpoint2/css/style.css
@@ -13,9 +13,9 @@ h1 {
 }
 
 h2 {
-  font-style: italic;
-  font-size: 2.5em;
-  color: black;
+    font-style: italic;
+    font-size: 2.5em;
+    color: black;
 }
 
 h3 {
@@ -150,46 +150,50 @@ li a {
 }
 
 .testimonial-text {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-flow: column;
-  max-width: 900px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-flow: column;
+    max-width: 900px;
 }
 
 #wines {
-max-width: 1170px;
+    max-width: 1170px;
 }
 
 .wine-info {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  flex-flow: column wrap;
-  margin-bottom: 80px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-flow: column wrap;
+    margin-bottom: 80px;
 }
 
-hr {
-
+#wines p {
+    font-style: italic;
+    line-height: 20px;
+    color: black;
+    margin-top: 35px;
 }
 
 .wine-info img {
-height: 500px;
+    height: 500px;
 }
 
 .shop {
-  background-color: #91a05c;
-  color: white;
-  font-family: Helvetica, Arial, sans-serif;
-  font-size: 12px;
-  letter-spacing: .1em;
-  padding: 10px;
-  border: 0;
-  text-transform: uppercase;
-  width: 150px;
-  height: 45px;
-  margin-top: 20px;
+    background-color: #91a05c;
+    color: white;
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 12px;
+    letter-spacing: .1em;
+    padding: 10px;
+    border: 0;
+    text-transform: uppercase;
+    width: 150px;
+    height: 45px;
+    margin-top: 20px;
 }
+
 
 /* Media Queries */
 
