--- a/10week/css/style.css
+++ b/10week/css/style.css
@@ -1,133 +1,108 @@
-body {
-    font-family: Georgia, serif;
-    color: white;
-    text-align: center;
-}
+        body {
+            font-family: 'Nunito', sans-serif;
+            color: white;
+            text-align: center;
+        }
 
-h1 {
-    font-size: 32px;
-    line-height: 44px;
-    font-style: italic;
-    margin-bottom: 20px;
-    /*width: 740px;*/
-}
+        .navbar {
+            height: 55px;
+            border-radius: 0px;
+            border-color: #e7e7e7;
+        }
 
-h2 {
-    font-style: italic;
-    font-size: 2.5em;
-    color: black;
-}
+        a {
+            font-family: 'Nunito', sans-serif;
+            text-transform: uppercase;
+            font-size: 11px;
+            letter-spacing: .1em;
+        }
 
-h3 {
-    font-size: 2.5em;
-    color: black;
-    line-height: 38px;
-    font-style: italic;
-    margin-bottom: 20px;
-}
+        li a {
+            color: gray;
+            font-family: 'Nunito', sans-serif;
+            text-transform: uppercase;
+            font-size: 12px;
+            letter-spacing: .1em;
+        }
+        li {
+          list-style-type: none;
+        }
 
-h4 {
-    color: gray;
-    font-size: 16px;
-    text-transform: uppercase;
-}
+        p {
+          font-size: 25px;
+        }
 
-h5 {
-    font-size: 16px;
-    line-height: 26px;
-}
+        #hero {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #2e2e2e;
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover;
+            width: 100%;
+            height: 800px;
+            margin-top: -75px;
+        }
+        .hero-text {
+            display: flex;
+            justify-content: center;
+            align-items: center; 
+            flex-flow: column;
+            margin-top: 60px;
+        }
+        .logo {
+            display: flex;
+            height: 80%;
+            width: 80%;
+        }
 
-h6 {
-    font-family: Helvetica, Arial, sans-serif;
-    font-size: 14px;
-    line-height: 24px;
-    margin-top: 20px;
-}
+        #about-me {
+            background-color: #F7484E;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            height: 800px;
+        }
 
-p {
-    font-size: 16px;
-    line-height: 28px;
-    color: #777;
-}
+        #work {
+            background-color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            height: 800px;
+        }
 
-#quote {
-    font-size: 24px;
-    line-height: 40px;
-    font-style: italic;
-    color: white;
-}
+        #contact {
+            background-color: #292929;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            height: 800px;
+        }
+        /* Media Queries */
 
-.navbar {
-    height: 55px;
-    border-radius: 0px;
-    border-color: #e7e7e7;
-}
+        @media (max-width: 767px) {
+            .navbar-collapse {
+                background-color: white;
+                z-index: 10;
+                position: absolute;
+                margin-top: 3px;
+                width: 100%;
+            }
+            li a {
+                color: black;
+            }
+        }
 
-a {
-    font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    text-transform: uppercase;
-    font-size: 11px;
-    letter-spacing: .1em;
-}
+        @media (max-width: 992px) {
+            .about-us-text {
+                padding: 0 80px;
+            }
+        }
 
-li a {
-    color: gray;
-    font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    text-transform: uppercase;
-    font-size: 12px;
-    letter-spacing: .1em;
-}
-
-#hero {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #2e2e2e;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    width: 100%;
-    height: 800px;
-    margin-top: -75px;
-}
-
-.hero-text {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: column;
-    margin-top: 60px;
-}
-
-.logo {
-    margin: 0 auto;
-    height: auto;
-    margin-bottom: 50px;
-}
-
-
-
-
-/* Media Queries */
-
-@media (max-width: 767px) {
-    .navbar-collapse {
-        background-color: white;
-        z-index: 10;
-        position: absolute;
-        margin-top: 3px;
-        width: 100%;
-    }
-    li a {
-        color: black;
-    }
-}
-
-@media (max-width: 992px) {
-    .about-us-text {
-        padding: 0 80px;
-    }
-}
-
-@media (max-width: 1375px) {
-    .about-us-text {
+        @media (max-width: 1375px) {
+            .about-us-text {
