--- a/10week/css/style.css
+++ b/10week/css/style.css
@@ -26,11 +26,20 @@
         }
         li {
           list-style-type: none;
+          font-family: 'Nunito', sans-serif;
+          text-transform: uppercase;
+          font-size: 12px;
+          letter-spacing: .1em;
+          text-align: center;
         }
 
         p {
-          font-size: 25px;
+          font-size: 20px;
         }
+        h1 {
+          color: black;
+        }
+
 
         #hero {
             display: flex;
@@ -62,7 +71,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-          /*  width: 100%; */ 
+          /*  width: 100%; */
            /* height: 800px; */
         }
         .about-text {
@@ -83,14 +92,18 @@
             height: 800px;
         }
 
-
-
         #work {
             background-color: white;
             display: flex;
             justify-content: center;
             align-items: center;
-            width: 100%;
+        }
+        .work-text {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-flow: column wrap;
+            padding: 0 130px;
             height: 800px;
         }
 
@@ -99,9 +112,15 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            width: 100%;
-            height: 800px;
         }
+        .contact-text {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-flow: column wrap;
+        padding: 0 130px;
+        height: 800px;
+      }
         /* Media Queries */
 
         @media (max-width: 767px) {
