--- a/10week/css/style.css
+++ b/10week/css/style.css
@@ -36,6 +36,7 @@
         p {
           font-size: 20px;
         }
+
         h1 {
           color: black;
         }
@@ -141,6 +142,17 @@
                 color: black;
             }
         }
+
+        @media (max-width: 767px) {
+          #work {
+            background-color: #F7484E;
+            width: 100%;
+          }
+
+          @media (max-width: 767px) {
+            #work h1 {
+              color: white; 
+            }
 
         @media (max-width: 992px) {
             .about-us-text {
